# Sovereign-Layer-2-blockchain-

./: .dockerignore  .gitignore  .golangci.yml  .goreleaser.yaml  Makefile  deploy.txt  docker-compose.yml  final-phase-1.md  fix.md  fix1.10.md  fix1.9.md  go.work  go.work.sum  implemention_plan.md  implemtion_fix.md  mainnet-plan.md  package.json  phase-1.md  phase-2-review.md  planned-vs-implemented.md  pnpm-lock.yaml  pnpm-workspace.yaml  proposal.json  scratch_derive_addr.go  sovereign-l1-explorer-plan.md  sovereign-l1-explorer-plan_(1)_1783458977833.md  txt  whole_plan.md
artifacts/: checksums.txt  constitution.wasm  cw1155_multi.wasm  cw20_token.wasm  cw721_nft.wasm  cw_counter.wasm  governance.wasm  reserve_fund.wasm  treasury.wasm
backend/: Dockerfile  entrypoint.sh  go.mod  go.sum
bridge/: foundry.toml
cache/: solidity-files-cache.json
chain/: Dockerfile  entrypoint.sh  genesis.dev.json  genesis.json  genesis.prod.json  go.mod  go.sum
contracts/: Cargo.toml
contracts/constitution/: Cargo.toml
contracts/constitution/schema/: constitution.json
contracts/constitution/schema/raw/: execute.json  instantiate.json  query.json  response_to_get_constitution.json
contracts/constitution/src/: contract.rs  msg.rs  state.rs
contracts/cw1155/: Cargo.toml
contracts/cw1155/src/: lib.rs
contracts/cw20/: Cargo.toml
contracts/cw20/src/: lib.rs
contracts/cw721/: Cargo.toml
contracts/cw721/src/: lib.rs
doc/: phase_0_audit_report.md  phase_1_gap_analysis.md  phase_2_gap_analysis.md
e2e/: bsc_testnet_e2e_test.go  comprehensive_phases_1_to_7_test.go  cosmwasm_counter_test.go  e2e_test.go  evm_cosmwasm_test.go  explorer_comprehensive_test.go  go.mod  go.sum  (+27 more)
(+2214 files in other folders)
