[package]
name = "constitution"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "1.5.0", features = ["cosmwasm_1_1", "cosmwasm_1_2"] }
cw-storage-plus = "1.2.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
schemars = "0.8.15"
thiserror = "1.0"
cosmwasm-schema = "1.5.0"

[dev-dependencies]
cw-multi-test = "0.19.0"

[features]
library = []
