[package]
name = "cw20-token"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "1.5.0"
cw20-base = { version = "1.1.2", features = ["library"] }
schemars = "0.8.15"
serde = { version = "1.0", default-features = false, features = ["derive"] }
zeroize = "=1.7.0"
base64ct = "=1.6.0"
